# evalkit

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  error.md  pyproject.toml
backend/: Dockerfile  requirements-dev.txt  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/cache/: __init__.py  cache.py
backend/app/core/: __init__.py  autofix.py  deepeval_wrapper.py  deterministic.py  gate_policy.py  normalization.py  normalizer.py  pipeline.py  ragas_wrapper.py  router.py
docs/: evalkit_techniques.xlsx
evalkit/: api_keys.py  auth.py  cli.py  config.py  legal.py  main.py  payment.py  rate_limit.py  subscriptions.py
evalkit-ui/: middleware.ts  package.json  tailwind.config.ts
evalkit-ui/app/: globals.css  layout.tsx  page.tsx
evalkit-ui/components/: Footer.tsx
evalkit-ui/lib/: api.ts  constants.ts  types.ts  utils.ts
evalkit/judges/: anthropic_judge.py  base.py  consensus.py  escalation.py  hallucination_tier.py  openai_judge.py
evalkit/layers/: anomaly.py  answerability.py  chunk_quality.py  claims.py  cost_tracker.py  embedding_fitness.py  fix_suggestions.py  generation.py  retrieval.py  root_cause.py
evalkit/models/: enums.py  request.py  response.py
evalkit/regression/: detector.py
evalkit/reporting/: json_report.py  markdown_report.py
evalkit/storage/: sqlite.py
sdk/: pyproject.toml  setup.py
sdk/evalkit/: __init__.py  client.py  context.py  decorator.py
(+65 files in other folders)
