[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evalkit"
version = "1.0.0"
description = "Python SDK for EvalKit RAG Evaluation Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EvalKit", email = "support@evalkit.dev"}
]
dependencies = [
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://evalkit.dev"
Documentation = "https://docs.evalkit.dev"
Repository = "https://github.com/evalkit/evalkit-python"
